--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -11,7 +11,10 @@
 </head>
 
 <body>
-    <div>Microblog: <a href="/index.html">Home</a></div>
+    <div>Microblog:
+        <a href="/index.html">Home</a>
+        <a href="/login.html">Login</a>
+    </div>
     <hr>
     {% block content %}{% endblock %}
 </body>
