--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -11,11 +11,21 @@
 </head>
 
 <body>
-    <div>Microblog:
-        <a href="/index.html">Home</a>
-        <a href="/login.html">Login</a>
+    <div>
+        Microblog:
+        <a href="{{ url_for('index') }}">Home</a>
+        <a href="{{ url_for('login') }}">Login</a>
     </div>
     <hr>
+    {% with messages = get_flashed_messages() %}
+    {% if messages %}
+    <ul>
+        {% for message in messages %}
+        <li>{{ message }}</li>
+        {% endfor %}
+    </ul>
+    {% endif %}
+    {% endwith %}
     {% block content %}{% endblock %}
 </body>
 
