--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 
+
 {% extends "base.html" %}
 
 {% block content %}
@@ -8,11 +9,17 @@
     {{ form.hidden_tag() }}
     <p>
         {{ form.username.label }}<br>
-        {{ form.username(size=32) }}
+        {{ form.username(size=32) }}<br>
+        {% for error in form.username.errors %}
+        <span style="color: red;">[{{ error }}]</span>
+        {% endfor %}
     </p>
     <p>
         {{ form.password.label }}<br>
-        {{ form.password(size=32) }}
+        {{ form.password(size=32) }}<br>
+        {% for error in form.password.errors %}
+        <span style="color: red;">[{{ error }}]</span>
+        {% endfor %}
     </p>
     <p>{{ form.remember_me() }} {{ form.remember_me.label }}</p>
     <p>{{ form.submit() }}</p>
