--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 
 
+
 {% extends "base.html" %}
 
 {% block content %}
@@ -25,4 +26,8 @@
     <p>{{ form.submit() }}</p>
 </form>
 <p>New User? <a href="{{ url_for('register') }}">Click to Register!</a></p>
+<p>
+    Forgot Your Password?
+    <a href="{{ url_for('reset_password_request') }}">Click to Reset It</a>
+</p>
 {% endblock %}
