--- a/app/templates/404.html
+++ b/app/templates/404.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 
+
 {% extends "base.html" %}
 
-{% block content %}
+{% block app_content %}
 <h1>File Not Found</h1>
 <p><a href="{{ url_for('index') }}">Back</a></p>
 {% endblock %}
